solved issue of missing static files and also add Register option on frontpg

--- a/cloud_robotics_app/templates/cloud_robotics_app/base.html
+++ b/cloud_robotics_app/templates/cloud_robotics_app/base.html
@@ -41,11 +41,12 @@
       <div class="flex items-center ml-6">
         <div class="ml-6">
           <a href="{% url 'admin:index' %}">
-            <img
-              src="{% static 'core/images/robot.jpg' %}"
+            <!-- <img
+              src="{% static 'cloud_robotics_app/images/robot.jpg' %}"
               alt="logo-img"
               class="rounded-full h-16 w-16"
-            />
+            /> -->
+            <h3 class="text-white text-lg font-bold ml-3">Register</h3>
           </a>
         </div>
       </div>
